<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.phil.forgoodnessbakes.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:clickable="true"
            android:elevation="100dp"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="4dp">

            <ImageView
                android:id="@+id/nutella_cake_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/nutellacake" />

            <TextView
                android:id="@+id/nutella_cake_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="#FF0000"
                android:text="Nutella Cake"
                android:textAlignment="viewStart"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:clickable="true"
            android:elevation="100dp"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="4dp">

            <ImageView
                android:id="@+id/brownie_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/brownies" />

            <TextView
                android:id="@+id/brownie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="#FF0000"
                android:text="Brownie"
                android:textAlignment="viewStart"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:clickable="true"
            android:elevation="100dp"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="4dp">


            <ImageView
                android:id="@+id/yellow_cake_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/yellowcake" />

            <TextView
                android:id="@+id/yellow_cake_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="#FF0000"
                android:text="Yellow Cake"
                android:textAlignment="viewStart"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:clickable="true"
            android:elevation="100dp"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="4dp">

            <ImageView
                android:id="@+id/cheese_cake_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/originalcheesecake" />

            <TextView
                android:id="@+id/cheese_cake_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="#FF0000"
                android:text="Cheese Cake"
                android:textAlignment="viewStart"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />
        </android.support.v7.widget.CardView>







    </LinearLayout>
</ScrollView>