<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/coordinatorLayout">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            >

            <ImageView
                android:id="@+id/cheeseimage"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"/>



        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/cheese_cake_ingredients_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ingredients:"
                android:textSize="24sp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="@dimen/text_margin"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/cheese_cake_ingredients_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cheese_cake_ingredients_tv"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginEnd="@dimen/text_margin"

                />

            <TextView
                android:id="@+id/cheese_cake_steps_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Steps:"
                android:textSize="24sp"
                android:layout_marginBottom="16dp"
                android:layout_below="@id/cheese_cake_ingredients_rv"
                android:layout_marginStart="@dimen/text_margin"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/cheese_cake_steps_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cheese_cake_steps_tv"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginEnd="@dimen/text_margin"

                />


        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
