...
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            >

            <ImageView
                android:id="@+id/nutella_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/nutella_cake"
                app:layout_collapseMode="parallax"
...
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/nutella_ingredients_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ingredients:"
                android:textSize="24sp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="@dimen/text_margin"
...
